dashed border not showing fix

--- a/src/guifier/fields/containers/ArrayContainer/arrayContainerStyle.css
+++ b/src/guifier/fields/containers/ArrayContainer/arrayContainerStyle.css
@@ -2,15 +2,17 @@
     display: flex;
     flex-direction: column;
     flex: 1;
+    overflow-x: hidden;
 }
 
 .guifierArrayFieldContainer {
     display: flex;
-    align-items: center;
+    align-items: stretch;
     transition: 0.15s;
     border-bottom: 1px solid rgba(0, 0, 0, 0.075);
     padding-right: var(--primary-padding);
     opacity: 1;
+    height: 100%;
 }
 
 .guifierArrayfieldInnerContainer {
@@ -18,7 +20,6 @@
     align-items: center;
     flex: 1;
     width: 100%;
-    height: 45px;
     margin-bottom: var(--second-padding);
     margin-top: var(--second-padding);
 }
@@ -33,7 +34,10 @@
 }
 
 .guifierFieldLabelName {
+    display: flex;
+    align-items: center;
     font-size: larger;
+    height: 45px;
 }
 
 .guifierArrayLabelContainer {
@@ -42,7 +46,7 @@
     height: 100%;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     transform: translateX(-50%);
     padding-right: var(--primary-border-width);
 }
@@ -58,6 +62,7 @@
     transform: translateX(-50%);
     border-bottom: var(--primary-dashed-border);
     margin-left: 6px;
+    margin-top: calc(var(--primary-padding) + 12.5px);
 }
 
 .guifierArrayIndexLabel {
@@ -68,6 +73,7 @@
     align-items: center;
     height: 35px;
     width: 35px;
+    margin-top: 15px;
     background-color: white;
     border: var(--primary-border);
     border-radius: 100%;
@@ -103,6 +109,7 @@
     display: flex;
     position: relative;
     z-index: 1;
+    height: 100%;
     border-bottom: 1px solid rgba(0, 0, 0, 0.075);
 }
 
@@ -114,16 +121,23 @@
 
 /* the delete button for the fields */
 .guifierArrayFieldDeleteButton {
+    display: flex;
+    align-items: flex-start;
     color: var(--third-color);
     width: 0px;
     padding-left: 0px;
     transition: 300ms;
     opacity: 0;
     cursor: pointer;
+    margin-top: var(--primary-padding);
 }
 
 .guifierArrayFieldContainer:hover .guifierArrayFieldDeleteButton {
     padding-left: var(--second-padding);
     width: 34px;
     opacity: 1;
+}
+
+.guifierContainerFieldType {
+    height: 66px;
 }
